CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (CPRPG)

SET (CPRPG_VERSION_MAJOR 1)
SET (CPRPG_VERSION_MINOR 0)
SET (CPRPG_VERSION_MICRO 0)

CONFIGURE_FILE("${PROJECT_SOURCE_DIR}/include/config.h.in" "${PROJECT_BINARY_DIR}/include/config.h")

INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")

ADD_SUBDIRECTORY("src/cprpg")
