CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (CPRPG)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
INCLUDE("cmake/CXX11.cmake")
INCLUDE("cmake/CppcheckTargets.cmake")

SET (CPRPG_VERSION_MAJOR 1)
SET (CPRPG_VERSION_MINOR 0)
SET (CPRPG_VERSION_MICRO 0)

FIND_PACKAGE(cppcheck)
FIND_PACKAGE(Boost COMPONENTS system filesystem unit_test_framework REQUIRED)
check_for_cxx11_compiler(CXX11_COMPILER)
IF (CXX11_COMPILER)
    enable_cxx11()
ENDIF()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -pedantic-errors -Wextra -Werror -Wno-unused-parameter")
endif()

CONFIGURE_FILE("${PROJECT_SOURCE_DIR}/include/config.h.in" "${PROJECT_BINARY_DIR}/include/config.h")

INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")

ENABLE_TESTING()

ADD_SUBDIRECTORY("src/cprpg")
ADD_SUBDIRECTORY("src/vfs")
ADD_SUBDIRECTORY("src/logging")
