PROJECT (CPRPG_CPRPG)

FILE(GLOB_RECURSE Sources "main/*.cpp")
FILE(GLOB_RECURSE Tests "test/*.cpp")

ADD_EXECUTABLE(cprpg ${Sources})

ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)

ADD_EXECUTABLE(cprpg_test ${Tests})
TARGET_LINK_LIBRARIES(cprpg_test ${Boost_LIBRARIES})

ENABLE_TESTING()
ADD_TEST(CPRPG_CPRPG cprpg_test)
