PROJECT (CPRPG_CPRPG)

FILE(GLOB_RECURSE Sources "main/*.cpp")
FILE(GLOB_RECURSE Tests "test/*.cpp")

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIRS})
ADD_EXECUTABLE(cprpg ${Sources})
TARGET_LINK_LIBRARIES(cprpg ${SDL2_LIBRARIES})
TARGET_LINK_LIBRARIES(cprpg ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(cprpg cprpg_logging)
TARGET_LINK_LIBRARIES(cprpg cprpg_ui)

STRING(REPLACE ";" " " TestsAsString "${Tests}")
IF (NOT "${TestsAsString}" STREQUAL "")
    ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)

    ADD_EXECUTABLE(cprpg_test ${Tests})
    TARGET_LINK_LIBRARIES(cprpg_test ${Boost_LIBRARIES})

    ENABLE_TESTING()
    ADD_TEST(CPRPG_CPRPG cprpg_test)
ENDIF()
